--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   avatar           : "/assets/images/Foto-guapis-Pascu2.JPG"
   bio              : "Alberto Pascual-García"
   location         : "Imperial College London"
-  email            : "alberto.pascual.garcia.gmail.com"
+  email            : "alberto.pascual.garcia@gmail.com"
   uri              : 
   bitbucket        : 
   codepen          :
