Edit url in config file and update picture

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title_separator          : "-"
 name                     : "Alberto Pascual-García"
 description              : "Personal Webpage."
 url                      : "https://apascualgarcia.github.io" # the base hostname & protocol for your site e.g. 
-baseurl                  : "/github.io" # the subpath of your site, e.g. "/blog"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "apascualgarcia/github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : #/assets/images/Portada_web.png # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
