updated publications and current affiliation

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ author:
   name             : "Personal Webpage"
   avatar           : "/assets/images/Foto-guapis-Pascu2.JPG"
   bio              : "Alberto Pascual-García"
-  location         : "Imperial College London"
+  location         : "ETH-Zürich"
   email            : "alberto.pascual.garcia@gmail.com"
   uri              : 
   bitbucket        : 
