--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Hito"
+title                    : "In(Bio)"
 title_separator          : "-"
 name                     : "Alberto Pascual-García"
 description              : "Personal Webpage."
@@ -77,10 +77,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Personal Webpage"
+  name             : "Lab Webpage"
   avatar           : "/assets/images/Foto-guapis-Pascu2.JPG"
-  bio              : "Alberto Pascual-García"
-  location         : "ETH-Zürich"
+  bio              : "In(Bio)"
+  location         : "CNB"
   email            : "alberto.pascual.garcia@gmail.com"
   uri              : 
   bitbucket        : 
