--- a/_config.yml
+++ b/_config.yml
@@ -77,10 +77,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Lab Webpage"
+  name             : "In(Bio)"
   avatar           : "/assets/images/Foto-guapis-Pascu2.JPG"
-  bio              : "In(Bio)"
-  location         : "CNB"
+  bio              : "Lab Webpage"
+  location         : "CNB Madrid"
   email            : "alberto.pascual.garcia@gmail.com"
   uri              : 
   bitbucket        : 
